--- a/discord.yml
+++ b/discord.yml
@@ -1,2 +1,6 @@
-- name: Actions for Discord
-  uses: Ilshidur/action-discord@0.3.2
+- name: Discord notification
+  env:
+    DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
+  uses: Ilshidur/action-discord@master
+  with:
+    args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
